<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_bottom"
    app:startDestination="@id/nav_homeFragment">

    <fragment
        android:id="@+id/nav_homeFragment"
        android:name="edu.url.salle.eric.eugenio.eventme.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/nav_chatFragment"
        android:name="edu.url.salle.eric.eugenio.eventme.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat"/>
    <fragment
        android:id="@+id/nav_myEventsFragment"
        android:name="edu.url.salle.eric.eugenio.eventme.MyEventsFragment"
        android:label="@string/title_Events"
        tools:layout="@layout/fragment_my_events" />
    <fragment
        android:id="@+id/nav_profileFragment"
        android:name="edu.url.salle.eric.eugenio.eventme.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>