<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_message"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/signup_profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:background="@color/gray_100"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_default_profile"

        app:strokeColor="@color/gray_300"
        app:strokeWidth="1dp"
        app:shapeAppearanceOverlay="@style/profile_image_corner" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="text"
        android:hint="@string/signup_username_hint" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email_hint" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint" />

    <EditText
        android:id="@+id/signup_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="textPassword"
        android:hint="@string/signup_repeat_password_hint" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickSignup"
        android:background="@drawable/bg_button"
        android:text="@string/signup_button"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_login_text"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/signup_login_button"
            android:textColor="@color/blue_500"
            android:onClick="onClickGoToLogin"/>
    </LinearLayout>
</LinearLayout>