<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/title_editProfile"
        app:titleTextAppearance="@style/toolbar_text" />

    <!-- Photo -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/edit_profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:background="@color/gray_100"
        android:padding="2dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_default_profile"

        app:strokeColor="@color/gray_300"
        app:strokeWidth="1dp"
        app:shapeAppearanceOverlay="@style/profile_image_corner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/profile_change_photo"
        android:textColor="@color/blue_500"
        android:onClick="onClickUpdatePhoto" />

    <EditText
        android:id="@+id/edit_profile_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="text"
        android:hint="@string/signup_name_hint" />

    <EditText
        android:id="@+id/edit_profile_lastNname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="text"
        android:hint="@string/signup_last_name_hint" />

    <TextView
        android:id="@+id/edit_profile_email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center_vertical"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:textStyle="italic"
        android:textSize="18sp"
        android:background="@drawable/bg_edit_text_fill" />

    <EditText
        android:id="@+id/edit_profile_bio"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="top"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:hint="@string/profile_bio_hint" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_300" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/profile_private"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_profile_new_pass"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:paddingHorizontal="16dp"
        android:background="@drawable/bg_edit_text_fill"
        android:inputType="textPassword"
        android:hint="@string/profile_new_password_hint" />

    <Button
        android:id="@+id/edit_profile_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onClickSaveProfile"
        android:background="@drawable/bg_button"
        android:text="@string/profile_save_changes"
        android:textColor="@color/white"/>
</LinearLayout>