<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frag_chat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myEvents_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/title_MyEvents"
        app:titleTextAppearance="@style/toolbar_text" />

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_300" />

    <!-- Events Tab -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/myEvents_upcomingEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tabBar_upcomingEvents"
            android:textAlignment="center"
            android:textAppearance="@style/default_text"
            android:textColor="@color/color_tab_text" />

        <TextView
            android:id="@+id/myEvents_pastEvents"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tabBar_pastEvents"
            android:textAlignment="center"
            android:textAppearance="@style/default_text"
            android:textColor="@color/color_tab_text" />

    </LinearLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_300" />

    <!-- Events Recycled View -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/myEvents_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:background="@color/gray_100"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</LinearLayout>